# Neural_Network

./: .gitignore  README.md
neuralnetwork/: CMakeLists.txt  Config.txt
neuralnetwork/src/: CMakeLists.txt  Input.cpp  Input.h  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  PictureMatrix.cpp  PictureMatrix.h  gui.cpp  gui.h  gui.ui  main.cpp  neuronnet.vcxproj  neuronnet.vcxproj.filters
neuronnet/: Config.txt  Input.cpp  Input.h  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  PictureMatrix.cpp  PictureMatrix.h  leak_detector_c.c  neuronnet.cpp  neuronnet.sln  neuronnet.vcxproj  neuronnet.vcxproj.filters
neuronnet/Debug/: network.new.obj.enc  vc142.idb
neuronnet/Debug/neuronnet.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  neuronnet.lastbuildstate
